--- a/services/_includes/adoc/extended_configvars.adoc
+++ b/services/_includes/adoc/extended_configvars.adoc
@@ -9,15 +9,23 @@
 | Default Value
 | Description
     
-    
 
-a| `MICRO_LOG_LEVEL` +
+a| `CS3_GATEWAY` +
 a| [subs=-attributes]
 ++ ++
 a| [subs=-attributes]
 ++ ++
 a| [subs=-attributes]
 ++ ++
+
+a| `CS3_MACHINE_AUTH_API_KEY` +
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+    
 
 a| `MICRO_LOG_LEVEL` +
 a| [subs=-attributes]
@@ -27,6 +35,14 @@ a| [subs=-attributes]
 a| [subs=-attributes]
 ++Set the log level for the internal go micro framework. Only change on supervision of ownCloud Support. ++
     
+
+a| `MICRO_LOG_LEVEL` +
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
+a| [subs=-attributes]
+++ ++
 
 a| `MICRO_LOG_LEVEL` +
 a| [subs=-attributes]
